detailview-text weiter gemacht. fonts eingefügt.

--- a/app/Resources/views/admin/admin.html.twig
+++ b/app/Resources/views/admin/admin.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <a class="logout-btn" href="{{ path('logout') }}" style="float: right;">logout</a>
+    <a class="logout-btn simple-a" href="{{ path('logout') }}" style="float: right;">logout</a>
 
     <br/>
     <h1>Administrator-Bereich:</h1>
