--- a/app/Resources/views/admin/upload_result.html.twig
+++ b/app/Resources/views/admin/upload_result.html.twig
@@ -7,7 +7,7 @@
     <br/>
     <h1>Administrator-Bereich:</h1>
 
-    <a href="{{ path('admin') }}">Zurück zur Uploadseite</a>
+    <a class="simple-a" href="{{ path('admin') }}">Zurück zur Uploadseite</a>
     <br/><br/>
 
     <h3>Error-Liste:</h3>
@@ -19,7 +19,7 @@
     </p>
     <br/><br/>
 
-    <a href="{{ path('admin') }}">Zurück zur Uploadseite</a>
+    <a class="simple-a" href="{{ path('admin') }}">Zurück zur Uploadseite</a>
 
     <br/><br/>
 
