--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -71,8 +71,8 @@
                     <div class="col-9">
                         <a class="homepage-button" href="{{ path('_index') }}">
                             <img
-                                    alt="Die&nbsp;Marke&nbsp;Thonet<br/>Grafik&nbsp;Archiv"
-                                    src="{{ asset('assets/images/Archiv_Symbole_Mobil_Grafik_Archiv.svg') }}"
+                                alt="Die&nbsp;Marke&nbsp;Thonet<br/>Grafik&nbsp;Archiv"
+                                src="{{ asset('assets/images/Archiv_Symbole_Mobil_Grafik_Archiv.svg') }}"
                             />
                         </a>
                     </div>
@@ -94,7 +94,7 @@
                 <hr/>
             </div>
 
-            <!-- copy whole haeder because first real header is display:fixed
+            <!-- copy whole header because first real header is display:fixed
 
             <div class="top container-fluid" style="visibility: hidden!important;">
                 <div class="row">
