--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -143,6 +143,8 @@
         <script src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
         <script src="{{ asset('assets/js/jquery.lazy.min.js') }}"></script>
         <script src="{{ asset('assets/js/masonry.pkgd.min.js') }}"></script>
+        <script src="{{ asset('assets/js/jquery.zoom.min.js') }}"></script>
+        <script src="{{ asset('assets/js/jquery.elevateZoom-3.0.8.min.js') }}"></script>
         <script src="{{ asset('assets/js/scripts.js') }}"></script>
         {% block javascripts %}{% endblock %}
 
