resize buttons programmiert.

--- a/app/Resources/views/admin/upload_result.html.twig
+++ b/app/Resources/views/admin/upload_result.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}{{ parent() }} | Administratorbereich{% endblock %}
+
 {% block body %}
 
     <a class="logout-btn" href="{{ path('logout') }}" style="float: right;">logout</a>
