--- a/app/Resources/views/default/arbeitenImKontext.html.twig
+++ b/app/Resources/views/default/arbeitenImKontext.html.twig
@@ -1,5 +1,11 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}{{ parent() }} | Arbeiten im Kontext{% endblock %}
+
+{% block headerBalken2 %}
+    <h1 class="col-12 header-titel">Arbeiten im Kontext</h1>
+{% endblock %}
+
 {% block body %}
     <h1>
         Arbeiten im Kontext
