--- a/app/Resources/views/default/dasProjekt.html.twig
+++ b/app/Resources/views/default/dasProjekt.html.twig
@@ -1,5 +1,11 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}{{ parent() }} | Das Projekt{% endblock %}
+
+{% block headerBalken2 %}
+    <h1 class="col-12 header-titel">Das Projekt</h1>
+{% endblock %}
+
 {% block body %}
     <h1>
         Das Projekt
