--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,28 +1,34 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}{{ parent() }} | Suche{% endblock %}
+
+{% block headerBalken2 %}
+    <h1 class="col-7 header-titel">
+        Suchfilter
+    </h1>
+    <div class="col-5 resize-buttons">
+        <div>
+            <button class="resize-btn-klein img-button inactive-btn" data-size="klein">
+                <img class="active-btn" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Groessenasicht_klein_leer.svg') }}" alt="kleine Ansicht"/>
+                <img class="inactive-btn" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Groessenasicht_klein_voll.svg') }}" alt="kleine Ansicht"/>
+            </button>
+            <button class="resize-btn-mittel img-button inactive-btn" data-size="mittel">
+                <img class="active-btn" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Groessenasicht_mittel_leer.svg') }}" alt="mittelgroße Ansicht"/>
+                <img class="inactive-btn" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Groessenasicht_mittel_voll.svg') }}" alt="mittelgroße Ansicht"/>
+            </button>
+            <button class="resize-btn-gross img-button active-btn" data-size="gross">
+                <img class="active-btn" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Groessenasicht_gross_leer.svg') }}" alt="große Ansicht"/>
+                <img class="inactive-btn" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Groessenasicht_gross_voll.svg') }}" alt="große Ansicht"/>
+            </button>
+        </div>
+    </div>
+{% endblock %}
+
 {% block body %}
     <div>
 
         <section class="lazy-loading grid grid-gross images-overview">
             <div class="grid-sizer grid-item-gross" style="display: none;"></div>
-
-            {#
-            <img class="lazy rightclick-alert"
-                 src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-                 data-src="{{ asset('assets/images/a.png') }}"
-                 style="height:200px; position:relative; top:40px; transition: top .35s;"
-            />
-            <img class="lazy rightclick-alert"
-                 src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-                 data-src="{{ asset('assets/images/a.png') }}"
-                 style="height:200px; position:relative; top:40px; transition: top .35s;"
-            />
-
-            <br>
-            <br>
-            <br>
-
-            #}
 
             {% for archivierung in archivierungen %}
 
