--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -50,6 +50,7 @@
     padding: 0;
     width: auto;
     overflow: visible;
+    cursor: pointer;
 
     background: transparent;
 
@@ -142,7 +143,37 @@ figure{
 .top hr{
     border: 0;
     border-top: 1px solid black;
+}
+.top .header-balken1 + hr{
     margin-top: 28px;
+    margin-bottom: 0;
+}
+
+
+.top .header-balken2 .header-titel{
+    font-size: 23px;
+    margin-top: 16px;
+    margin-bottom: 0;
+}
+.top .header-balken2 .resize-buttons > div{
+    float: right;
+    margin-top: 5px;
+}
+.top .header-balken2 .resize-buttons img{
+    width: auto;
+    height: 40px;
+    margin-left: 7px;
+}
+
+.resize-buttons .active-btn img:first-child{
+    display: none!important;
+}
+.resize-buttons .inactive-btn img:last-child{
+    display: none!important;
+}
+
+.top .header-balken2 + hr{
+    margin-top: 5px;
 }
 
 
@@ -163,26 +194,35 @@ figure{
     margin: 0;
 }
 .grid-item-klein{
-    width: 20%;
+    width: 12.5%;
     margin: 0;
 }
 .grid-item-klein img{
-    max-height: 20vw;
+    max-height: 12.5vw;
 }
 
 /* --- Grid mittel */
-
+.grid-mittel{
+    margin: 0;
+}
+.grid-item-mittel {
+    width: 16.6666%;
+    margin: 0;
+}
+.grid-item-mittel img{
+    max-height: 16.6666vw;
+}
 
 /* --- Grid gross */
 .grid-gross{
     margin: 0;
 }
 .grid-item-gross {
-    width: 33%;
+    width: 25%;
     margin: 0;
 }
 .grid-item-gross img{
-    max-height: 33vw;
+    max-height: 25vw;
 }
 
 
