--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -92,6 +92,7 @@ h1,h2,h3,h4,h5,h6,p,a{
 
 a:hover{
     text-decoration: none;
+    color: hotpink;
 }
 a.simple-a{
     text-decoration: underline;
@@ -119,7 +120,37 @@ figure{
 }
 
 
+.overlay{
+    position: fixed;
+    height: 101vh;
+    width: 101vw;
+    padding-left: 30px;
+    padding-top: 30px;
+    margin-top: 2px;
+    z-index: 999;
+    right: 0;
+    left: 0;
+    background-color: white;
+}
+
+
+/* Burger Overlay: */
+#burger-overlay nav ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+
+
 /* header */
+.top{
+    background-color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+}
+
 .top a.homepage-button{
     display: inline-block;
 }
@@ -174,8 +205,8 @@ figure{
 
 .top .header-balken2 + hr{
     margin-top: 5px;
+    margin-bottom: 0;
 }
-
 
 
 /* Mansory Grid: */
@@ -227,6 +258,7 @@ figure{
 
 
 
+
 /* index */
 
 
@@ -259,3 +291,12 @@ figure{
     border-top: 1px solid black;
 }
 
+
+
+/* Adminbereich: */
+.logout-btn{
+    margin-top: 15px;
+}
+.logout-btn a{
+    float: right;
+}
