--- a/app/Resources/views/detail/detail.html.twig
+++ b/app/Resources/views/detail/detail.html.twig
@@ -23,7 +23,7 @@
                 </figure>
             </div>
             <div class="detail-star">
-                <button class="img-button add-fav-button">
+                <button class="img-button add-fav-button" title="zu Favoriten hinzufügen">
                     <img src="{{ asset('assets/images/Archiv_Symbole_Mobil_Auswahl_leer.svg') }}" alt="zu Favoriten hinzufügen">
                 </button>
             </div>
@@ -202,45 +202,6 @@
                 </div>
             </div>
         </section>
-
-
-        {#
-
-        <section class="lazy-loading grid images-overview">
-            <div class="grid-sizer" style="display: none;"></div>
-
-
-            <img class="lazy rightclick-alert"
-                 src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-                 data-src="{{ asset('assets/images/a.png') }}"
-                 style="height:200px; position:relative; top:40px; transition: top .35s;"
-            />
-            <img class="lazy rightclick-alert"
-                 src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-                 data-src="{{ asset('assets/images/a.png') }}"
-                 style="height:200px; position:relative; top:40px; transition: top .35s;"
-            />
-
-            <br>
-            <br>
-            <br>
-
-
-
-            {% for archivierung in archivierungen %}
-
-                <a href="{{ asset('assets/images/archivierungen/' ~ archivierung.links["klein"]) }}"
-                   class="grid-item">
-                    <img class="lazy" alt=""
-                         src="{{ asset('assets/images/emptyPic.png') }}"
-                         data-src="{{ asset('assets/images/archivierungen/' ~ archivierung.links["klein"]) }}"
-                    />
-                </a>
-
-            {% endfor %}
-        </section>
-        #}
-
 
 
     </div>
