--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -102,6 +102,13 @@ a.simple-a:hover{
     text-decoration: underline;
 }
 
+::-moz-selection {
+    background-color: rgb(248,197,198);
+}
+::selection {
+    background-color: rgb(248,197,198);
+}
+
 body {
     background: white;
 }
